--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,192 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* background: no-repeat fixed center url("../public/background.png"), black; */
+  background: #000000;
+  color: white;
+}
+
+.page {
+  display: block;
+  align-items: center;
+  margin-top: 100px;
+  padding: 50px;
+}
+
+@media screen and (max-width: 767px) {
+  .title {
+    margin-bottom: rem;
+    font-size: 5vw;
+    width: 80%;
+  }
+}
+
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  top: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  position: fixed;
+  width: 100%;
+  min-height: 75px;
+  background-color: black;
+  color: white;
+}
+
+.navbar-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  display: flex;
+}
+
+.navbar-links li {
+  padding: 0 2.5rem;
+}
+
+.navbar-links a {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar-links a:hover {
+  background-color: black;
+}
+
+.burger {
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: none;
+  color: inherit;
+}
+
+@media screen and (max-width: 767px) {
+  .navbar-links {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: -100vw;
+    bottom: 0;
+    width: 0;
+    height: 100vh;
+    padding: 2rem;
+    background-color: black;
+    visibility: hidden;
+    transition: all 0.8s ease-out;
+  }
+
+  .show-navbar .navbar-links {
+    right: 0;
+    width: 100vw;
+    visibility: visible;
+  }
+
+  .navbar-links li {
+    display: block;
+    padding: 1.5rem;
+    font-size: 5vw;
+  }
+
+  .navbar-links a::after {
+    content: "";
+    display: block;
+    margin: 0 auto;
+    width: 10vw;
+    height: 1px;
+    background: white;
+  }
+
+  .navbar-links a:last-child::after {
+    display: none;
+  }
+
+  .burger {
+    display: block;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+  }
+
+  .burger:hover {
+    cursor: pointer;
+  }
+
+  .burger-bar,
+  .burger-bar::before,
+  .burger-bar::after {
+    display: block;
+    width: 40px;
+    height: 3px;
+    position: relative;
+    border-radius: 3px;
+    background-color: white;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .burger-bar::before,
+  .burger-bar::after {
+    content: "";
+    position: absolute;
+    left: 0;
+  }
+
+  .burger-bar::before {
+    transform: translateY(-12px);
+  }
+
+  .burger-bar::after {
+    transform: translateY(12px);
+  }
+
+  .show-navbar .burger-bar {
+    width: 0;
+    background: transparent;
+  }
+
+  .show-navbar .burger-bar::before {
+    transform: rotate(45deg);
+  }
+
+  .show-navbar .burger-bar::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.login {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  background-color: var(--background-base, #1ed760);
+  color: var(--text-base, #000000);
+  display: flex;
+  border-radius: 500px;
+  min-block-size: 48px;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-block: 8px;
+  padding-inline: 32px;
+
+  text-transform: none;
+  letter-spacing: 0px;
+
+  -webkit-tap-highlight-color: transparent;
+  margin-block: 0px;
+  font-size: 1rem;
+  color: black;
+  font-weight: 700;
+  text-decoration: none;
+  width: fit-content;
 }
